# tg_reader

./: .gitignore  .pre-commit-config.yaml  README.md  env_tg_reader.yml  pyproject.toml  sandbox.py
.github/workflows/: builds.yml  python-package.yml  test_on_versions.yml  testing.yml
CICD/: bandit.json  coverage.json
sample_data/: fgDDtwU4we4_15533.0-15538.76.TextGrid
src/tg_reader/: __init__.py  datatypes.py
tests/: datatypes_test.py  sample_files_test.py  test_on_sample_files.py  test_on_synthetic_data.py
