[project]
name = "tg_reader"
version = "0.0.1"
authors = [
  { name="Peter Rupnik", email="peter.rupnik@ijs.si" },
]
description = "A small package for converting textgrids into 50Hz (20ms) label frames."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.urls]
Homepage = "https://github.com/5roop/tg_reader"
Issues = "https://github.com/5roop/tg_reader/issues"